# wind-analyzer

./: .gitignore  README.md  pyproject.toml
.playwright-mcp/: page-2026-06-13T10-33-00-872Z.yml  page-2026-06-13T10-48-53-042Z.yml
docs/: ux-panel-analysis.md
output/: REPORT.md  VALIDATION.md  station_validation.json
output-typical/: REPORT.md
scripts/: build_station_dataset.py  compute_shelter.py  harvest_stations.py  precompute_stations_web.py  precompute_web.py  validate_model.py  validate_stations.py
src/wind_analyzer/: __init__.py  buildings.py  cli.py  config.py  diagnostics.py  landcover.py  report.py  shelter.py  solver.py  suburbs.py  terrain.py  winddata.py
tests/: test_solver.py
web/: _headers  app.js  config.local.js  index.html  style.css
web/data/: run_00_strong.json  run_00_typical.json  run_01_strong.json  run_01_typical.json  run_02_strong.json  run_02_typical.json  run_03_strong.json  run_03_typical.json  run_04_strong.json  run_04_typical.json  run_05_strong.json  run_05_typical.json  run_06_strong.json  run_06_typical.json  run_07_strong.json  run_07_typical.json  run_08_strong.json  run_08_typical.json  run_09_strong.json  run_09_typical.json  run_10_strong.json  run_10_typical.json  run_11_strong.json  run_11_typical.json  run_12_strong.json  run_12_typical.json  run_13_strong.json  run_13_typical.json  run_14_strong.json  run_14_typical.json  run_15_strong.json  run_15_typical.json  shelter_00.json  shelter_01.json  shelter_02.json  shelter_03.json  shelter_04.json  shelter_05.json  shelter_06.json  shelter_07.json  (+10 more)
